[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sounds/Menu_Selection_Click.wav" type="AudioStream" id=1]
[ext_resource path="res://Sounds/LoopingTrack use for main menu and settings.ogg" type="AudioStream" id=2]
[ext_resource path="res://settings/settings.gd" type="Script" id=3]
[ext_resource path="res://ButtonsAndArt/background-small-size/fossil_cave.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.027451, 0.027451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.239216, 0.133333, 0.133333, 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -303.0
margin_right = 516.0
margin_bottom = 299.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -145.0
margin_right = 140.5
margin_bottom = 145.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.823529 )
margin_right = 281.0
margin_bottom = 290.0
size_flags_vertical = 3
disabled = true
expand_icon = true

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Button"]
margin_left = -2.5
margin_top = -2.0
margin_right = 278.5
margin_bottom = 22.0
text = "Music"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/Button"]
margin_left = -2.5
margin_top = 19.0
margin_right = 278.5
margin_bottom = 43.0
text = "SFX"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="returnBtn" type="Button" parent="VBoxContainer/Button"]
margin_left = 115.5
margin_top = 262.0
margin_right = 172.5
margin_bottom = 289.0
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer"]
stream = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/Button/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/returnBtn" to="." method="_on_Button_pressed"]
[connection signal="ready" from="VBoxContainer/Button/returnBtn" to="." method="_on_returnBtn_ready"]
